# solo-audit

./: .gitignore  AUDIT_LEARNINGS.md
artifacts/: SOLO知识体系完整版.md
memory/: solo-knowledge-compilation.md
memory/.mev/: fleet-status.md
plugins/: PLUGIN-DISPATCH.md  PLUGIN-REGISTRY.md
skills/babata-browser/: SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/babata-browser/.clawhub/: origin.json
skills/babata-browser/babata_browser.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
skills/babata-browser/scripts/: __init__.py  babata_browser.py
skills/deep-research/: SKILL.md  agent1a-scout-web.md  agent1b-scout-academic.md  agent1c-scout-deep.md  agent1d-merge.md  agent2a-analyze.md  agent2b-analyze.md  agent3-draft.md  agent4-review.md  agent5-revise.md
skills/mev-engine/: README.md  SKILL.md  SOUL.mev.md  _meta.json
skills/mev-engine/.clawhub/: origin.json
skills/msf/: SKILL.md  agent3-draft.md
skills/solo/: README.md  SKILL.md  SOUL.mev.md  _meta.json  agent-audit.md
skills/solo-audit/: SKILL.md
skills/solo/.clawhub/: origin.json
skills/solo/scripts/: ima-upload.cjs
